--- a/web/index.html
+++ b/web/index.html
@@ -19,53 +19,34 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top" style="width: auto">
   <div class="container-fluid">
-      <div class = "row">
-          <div class = "col-md-2 col-sm-2 col-xs-3 text-left">
-              <img src = "images/logo.PNG"  id = "logo" style="padding-top:10px; padding-bottom: 10px;"/>
+      <div class="row header">
+        <p>X-Users</p>
+      </div>
+      <div class = "row nameLine">
+          <p>Hello, Admin Adminovich!</p>
+      </div>
+      <div class="row">
+          <div class="col-md-offset-1 col-md-1">
+              <button class="btn btn-default cursor-pointer">Add new</button>
           </div>
-          <div class = "col-md-8 col-sm-9 col-xs-7">
-              <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
-                      <!--<span class = "sr-only">Открыть навигацию</span>-->
-                      <span class = "icon-bar"></span>
-                      <span class = "icon-bar"></span>
-                      <span class = "icon-bar"></span>
-                  </button>
-                  <!--<a class = "navbar-brand" href = "#"><img src = "images/logo.PNG"/></a>-->
-              </div>
-              <div class = "collapse navbar-collapse" id="responsive-menu">
-                  <div class = "col-md-12 col-sm-12 col-xs-12 col-time text-center">
-                      <div class = "col-time-content">
-                          <ul class = "nav navbar-nav">
-                              <li style = "width: 160px;"><a href="#" id = "schedule" name = "scheduleMenu">Расписание</a></li>
-                              <li style = "width: 160px;" class="dropdown">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="place" name = "placeMenu">Место посадки</a>
-                                  <ul class="dropdown-menu">
-                                      <li><a href = "#" id = "placeMetro" name = "placeMetroMenu">Около метро "Московская"</a></li>
-                                      <li><a href = "#" id = "placeTechnopolis" name = "placeOfficeMenu">Около Технополиса</a></li>
-                                  </ul>
-                              </li>
-                              <li style = "width: 160px;">
-                                  <a href="#" id="fullChedule" name = "fullScheduleMenu">Полное расписание</a>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
+          <div class="col-md-4">
+              <label for="meeting">Search by birthday : </label>
+              <input id="meeting" class = "cursor-pointer" type="date" onclick=""/>
           </div>
-          <div class = "col-md-2 col-sm-1 col-xs-2 text-right" >
-              <div class="btn-group-vertical" style = 'margin-top: 5px;'>
-                  <button type="button" class="btn btn-primary btn-xs" onclick = "changeLocale('en')">EN</button>
-                  <button type="button" class="btn btn-primary btn-xs" onclick = "changeLocale('ru')">RU</button>
-              </div>
+          <div class = "col-md-5">
+              <label for="nameSearching">Search by name or e-mail: </label>
+              <input id="nameSearching" class = "cursor-pointer" onclick=""/>
           </div>
+
+      </div>
+      <div class="row">
+
       </div>
   </div>
-</div>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
