--- a/web/index.html
+++ b/web/index.html
@@ -30,14 +30,19 @@
           <p>Hello, Admin Adminovich!</p>
       </div>
       <div class="row">
-          <div class="col-md-offset-1 col-md-1">
-              <button class="btn btn-default cursor-pointer">Add new</button>
+          <div class="col-md-offset-1 col-md-2 col-sm-offset-1 col-sm-2">
+              <input id = "addNewBut" type="button" class = "btn btn-default cursor-pointer addBtn" value="Add new User">
+              <!--<button class="btn btn-default cursor-pointer addBtn" >Add new user</button>-->
           </div>
-          <div class="col-md-4">
-              <label for="meeting">Search by birthday : </label>
+          <div class="col-md-3 col-sm-3">
+              <label for="meeting">Searching by birthday : </label>
               <input id="meeting" class = "cursor-pointer" type="date" onclick=""/>
           </div>
-          <div class = "col-md-5">
+          <div class="col-md-3 col-sm-3">
+              <label for="emailSearch">Searching by e-mail : </label>
+              <input id="emailSearch" class = "cursor-pointer" onclick=""/>
+          </div>
+          <div class = "col-md-3 col-sm-3">
               <label for="nameSearching">Search by name or e-mail: </label>
               <input id="nameSearching" class = "cursor-pointer" onclick=""/>
           </div>
