--- a/web/errorAuth.html
+++ b/web/errorAuth.html
@@ -19,6 +19,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="js/content.js"></script>
 
 </head>
 <body>
@@ -29,12 +30,13 @@
     <div class = "row text-center">
         <div class="col-md-4 col-md-offset-4">
             <form action="auth" method="get" style = "border: double; margin-top: 100px; padding-top: 30px; padding-bottom: 30px;">
+                <p>Incorrect username or password. Please, try again.</p>
                 <p>Username: <input type = "text" value="username" name = "username"></p>
                 <p>Password: <input type = "text" value="password" name = "password"></p>
                 <button class="btn btn-primary">Log in</button>
             </form>
         </div>
-    <div class = "col-md-4"></div>
+        <div class = "col-md-4"></div>
     </div>
 </div>
 
