--- a/web/user.html
+++ b/web/user.html
@@ -19,23 +19,30 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="js/nameInfo.js"></script>
+    <script type="text/javascript" src="js/redirect.js"></script>
 
 </head>
 <body>
 <div class="container-fluid">
     <div class="row header">
-        <p>X-Users</p>
-    </div>
-    <div class = "row text-center">
-        <div class="col-md-4 col-md-offset-4">
-            <form action="auth" method="get" style = "border: double; margin-top: 100px; padding-top: 30px; padding-bottom: 30px;">
-                <p>Username: <input type = "text" value="username" name = "username"></p>
-                <p>Password: <input type = "text" value="password" name = "password"></p>
-                <button class="btn btn-primary">Log in</button>
-            </form>
+        <div class="col-md-3">
+            <p>X-Users</p>
         </div>
-    <div class = "col-md-4"></div>
+        <div class="col-md-8"></div>
+        <div class = "col-md-1">
+            <button class = "btn btn-primary" onclick="logout()">Log Out</button>
+        </div>
     </div>
+    <div class = "row nameLine">
+        <div class = "col-md-12">
+            <p id="userNameSurname">Hello, Admin Adminovich!</p>
+        </div>
+    </div>
+    <div class="row text-center">
+        <p style = "margin-top: 30px;">Sorry, You do not have permission to view this page.</p>
+    </div>
+    <hr>
 </div>
 
 
