--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
         <div class="col-md-4 col-md-offset-4">
             <form action="auth" method="get" style = "border: double; margin-top: 100px; padding-top: 30px; padding-bottom: 30px;">
                 <p>Username: <input type = "text" value="username" name = "username"></p>
-                <p>Password: <input type = "text" value="password" name = "password"></p>
+                <p>Password: <input type = "password" value="password" name = "password"></p>
                 <button class="btn btn-primary">Log in</button>
             </form>
         </div>
