--- a/web/user.html
+++ b/web/user.html
@@ -31,12 +31,7 @@
         </div>
         <div class="col-md-8"></div>
         <div class = "col-md-1">
-            <button class = "btn btn-primary" onclick="logout()">Log Out</button>
-        </div>
-    </div>
-    <div class = "row nameLine">
-        <div class = "col-md-12">
-            <p id="userNameSurname">Hello, Admin Adminovich!</p>
+            <button class = "btn btn-primary" onclick="toPage('logout')">Log Out</button>
         </div>
     </div>
     <div class="row text-center">
