--- a/web/errorAuth.html
+++ b/web/errorAuth.html
@@ -32,7 +32,7 @@
             <form action="auth" method="get" style = "border: double; margin-top: 100px; padding-top: 30px; padding-bottom: 30px;">
                 <p>Incorrect username or password. Please, try again.</p>
                 <p>Username: <input type = "text" value="username" name = "username"></p>
-                <p>Password: <input type = "text" value="password" name = "password"></p>
+                <p>Password: <input type = "password" value="password" name = "password"></p>
                 <button class="btn btn-primary">Log in</button>
             </form>
         </div>
